# BlackJack-AI

blackjack-crew/: .env.example  main.py  pyproject.toml  requirements.txt
blackjack-crew/crew/: __init__.py  agents.py  llm_adapter.py  tasks.py  tools.py
blackjack-crew/game_core/: __init__.py  game.py
