[project]
name = "blackjack-crew"
version = "0.1.0"
description = "A console Blackjack game with optional CrewAI integration"
authors = [ { name = "ak", email = "" } ]
readme = "README.md"
requires-python = ">=3.10"

# Core runtime dependencies (PEP 621 requires a sequence here)
dependencies = [
	"python-dotenv",
	"pydantic",
]

[project.optional-dependencies]
# Extras that can be installed on demand
google-genai = ["crewai[google-genai]"]
crewai = ["crewai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
